tdf#30731: Use ligature caret positions from the font

When ligature caret positions from the font are available, use them for
more accurate caret positions instead of evenly distributing the glyph
width over grapheme clusters.

Change-Id: I0ecfa35e1fff2b264b105182a4b29b2ebd033093
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138955
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@aliftype.com>